--- a/artifact/partials/profile/eco/style.scss
+++ b/artifact/partials/profile/eco/style.scss
@@ -217,3 +217,7 @@
     border-right: 2px solid rgb(0,127,203);
   }
 }
+.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{
+  background-color: rgba(3,169,244,.5);
+background-color: rgba(3,169,244,.5);
+}
